# a0x0i

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml
src/: CMakeLists.txt
src/include/: CMakeLists.txt
src/include/Optimlir/: CMakeLists.txt  OptimlirDialect.h  OptimlirDialect.td  OptimlirOps.h  OptimlirOps.td  OptimlirPasses.h  OptimlirPasses.td
src/lib/Optimlir/: CMakeLists.txt  OptimlirDialect.cpp  OptimlirOps.cpp  OptimlirShardingPass.cpp
src/optimlir-opt/: CMakeLists.txt  optimlir-opt.cpp
